discussion/kv_engine/155544/155544_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46827: Introduce KVBucket::hasMemoryInCheckpoint()

Change-Id: I29368cdee147fe6421398a75aff25f47e00725ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-06-10 14:32:32.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 14:38:53.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11315/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11735/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11735/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11463/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10387/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10387/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36703/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36703/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9740/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9740/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9740/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8335/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
